test position popup 2

--- a/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
+++ b/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
@@ -41,7 +41,7 @@
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
-
+            cursor: move;
             .object-select {
                 padding: 0 16px 0 0;
             }
