--- a/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
+++ b/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
@@ -18,7 +18,7 @@
     height: 100%;
     justify-content: space-between;
     border-radius: 3px;
-    border: solid var(--primary) 1px;
+    border: solid var(--divider-color) 1px;
     box-shadow: 0 3px 7px rgba(2, 34, 60, 0.16);
     position: absolute;
     content: "";
@@ -53,9 +53,9 @@
         }
 
         .icon-symbol {
-            font-size: 20px;
-            width: 20px;
-            height: 20px;
+            font-size: 16px;
+            width: 16px;
+            height: 16px;
             display: flex;
             justify-items: center;
             justify-content: center;
@@ -63,6 +63,7 @@
             flex: 0 0 auto;
             margin: 0 4px 0 4px;
             cursor: pointer;
+            color: var(--text-secondary);
 
             &:hover {
                 background-color: var(--divider-color);
@@ -76,16 +77,35 @@
         overflow: hidden;
         width: 100%;
         height: 100%;
+        cursor: auto;
 
         .select-feature {
             padding: 2px 2px 0 2px;
         }
-
+        .ant-tabs-nav .ant-tabs-nav-list {
+            display: flex;
+            align-items: flex-start;
+        }
         .ant-tabs-nav {
             margin: 0px;
-            height: 32px;
+            height: 100%;
+            width: 20px;
         }
-
+        .ant-btn {
+            font-size: 14px;
+            line-height: 1;
+            height: 24px;
+            padding: 0px;
+            border-radius: 3px;
+            margin: 0 0 5px 0;
+        }
+        .ant-tabs-nav .ant-tabs-nav-more {
+            position: relative;
+            padding: 5px;
+            background: transparent;
+            border: 0;
+            color: rgba(0, 0, 0, 0.88);
+        }
         .content-tabs {
             overflow: hidden;
             border-bottom: solid var(--divider-color) 1px;
@@ -109,6 +129,7 @@
                     justify-content: space-between;
                     padding: 2px;
                     border-bottom: solid var(--divider-color) 0.005em;
+                    align-items: center;
 
                     &:hover {
                         background-color: rgba(0, 0, 0, 0.025);
@@ -150,12 +171,18 @@
 
     .footer-popup {
         display: flex;
-        padding: 0 5px;
+        padding: 0;
         border-bottom-left-radius: 3px;
         border-bottom-right-radius: 3px;
         border-top: solid var(--divider-color) 1px;
-        cursor: pointer;
+        cursor: move;
         color: var(--primary);
+        
+
+        .coordinate-value {
+            padding: 0 5px;
+            cursor: pointer;
+        }
     }
 }
 
