--- a/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
+++ b/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
@@ -109,7 +109,7 @@
             justify-content: center;
             align-items: center;
             flex: 0 0 auto;
-            margin: 0 4px 0px 4px;
+            margin: 0 0 0 4px;
             cursor: pointer;
             color: var(--text-secondary);
             z-index: 1000;
