updating data after editing feature layer for popup

--- a/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
+++ b/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
@@ -14,8 +14,8 @@
 }
 
 .hover-right {
-    width: 15px !important;
-    right: -10px !important;
+    width: 12px !important;
+    right: -8px !important;
 
     &:hover {
         background-color: #106a9040;
@@ -24,8 +24,8 @@
 }
 
 .hover-left {
-    left: -10px !important;
-    width: 15px !important;
+    left: -8px !important;
+    width: 12px !important;
 
     &:hover {
         background-color: #106a9040;
@@ -34,8 +34,8 @@
 }
 
 .hover-top {
-    height: 15px !important;
-    top: -10px !important;
+    height: 12px !important;
+    top: -8px !important;
 
     &:hover {
         background-color: #106a9040;
@@ -44,8 +44,8 @@
 }
 
 .hover-bottom {
-    bottom: -10px !important;
-    height: 15px !important;
+    bottom: -8px !important;
+    height: 12px !important;
 
     &:hover {
         background-color: #106a9040;
@@ -53,7 +53,44 @@
     }
 }
 
-.hover-angle {
+.hover-angle-bottom-right {
+    width: 12px !important;
+    height: 12px !important;
+    right: -8px !important;
+    bottom: -8px !important;
+    &:hover {
+        background-color: #106a9040;
+        border-radius: 4px;
+    }
+}
+
+.hover-angle-bottom-left {
+    width: 12px !important;
+    height: 12px !important;
+    left: -8px !important;
+    bottom: -8px !important;
+    &:hover {
+        background-color: #106a9040;
+        border-radius: 4px;
+    }
+}
+
+.hover-angle-top-left {
+    width: 12px !important;
+    height: 12px !important;
+    left: -8px !important;
+    top: -8px !important;
+    &:hover {
+        background-color: #106a9040;
+        border-radius: 4px;
+    }
+}
+
+.hover-angle-top-right {
+    width: 12px !important;
+    height: 12px !important;
+    right: -8px !important;
+    top: -8px !important;
     &:hover {
         background-color: #106a9040;
         border-radius: 4px;
@@ -117,7 +154,7 @@
             &:hover {
                 background-color: var(--divider-color);
                 color: var(--primary);
-                border-radius: 3px;
+                border-radius: 2px;
             }
         }
     }
