--- a/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
+++ b/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
@@ -102,7 +102,6 @@
     height: 100%;
     justify-content: space-between;
     border-radius: 3px;
-    border: solid var(--divider-color) 1px;
     box-shadow: 0 3px 7px rgba(2, 34, 60, 0.16);
     position: absolute;
     content: "";
@@ -113,10 +112,11 @@
 
     .title {
         display: flex;
-        padding: 0;
         justify-content: space-between;
         align-items: center;
-        border-bottom: solid var(--divider-color) 1px;
+        border-radius: 3px 3px 0 0;
+        background-color: rgba(0, 0, 0, 0.04);
+        padding: 0;
 
         .title-name {
             font-weight: 500;
@@ -159,49 +159,51 @@
         }
     }
 
+    .select-feature {
+        padding: 0;
+        display: flex;
+
+        .edit-symbol {
+            font-size: 14px;
+            width: 24px;
+            height: 24px;
+            display: flex;
+            justify-items: center;
+            justify-content: center;
+            align-items: center;
+            flex: 0 0 auto;
+            margin: 0;
+            cursor: pointer;
+            color: var(--text-secondary);
+            z-index: 1000;
+
+            &:hover {
+                background-color: var(--divider-color);
+                color: var(--primary);
+                border-radius: 3px;
+            }
+        }
+    }
+
     .content {
         overflow: hidden;
         width: 100%;
         height: 100%;
         cursor: auto;
 
-        .select-feature {
-            padding: 2px 2px 0 2px;
-        }
-
-        .ant-tabs-nav .ant-tabs-nav-list {
-            display: flex;
-            align-items: flex-start;
-        }
-
-        .ant-tabs-nav {
-            margin: 0px;
-            height: 100%;
-            width: 20px;
-        }
-
-        .ant-btn {
-            font-size: 14px;
-            line-height: 1;
-            height: 24px;
-            padding: 0px;
-            border-radius: 3px;
-            margin: 0 0 5px 0;
-        }
-
-        .ant-tabs-nav .ant-tabs-nav-more {
+        .ant-tabs >.ant-tabs-nav, :where(.css-dev-only-do-not-override-20aemx).ant-tabs >div>.ant-tabs-nav {
             position: relative;
-            padding: 5px;
-            background: transparent;
-            border: 0;
-            color: rgba(0, 0, 0, 0.88);
+            display: flex;
+            flex: none;
+            align-items: center;
+            width: 24px;
         }
 
         .content-tabs {
             overflow: hidden;
-            border-bottom: solid var(--divider-color) 1px;
+            border-bottom: solid var(--divider-color) 0.005em;
             width: 100%;
-            height: calc(100% - 24px);
+            height: 100%;
 
             .ant-tabs-content-holder {
                 display: flex;
@@ -272,15 +274,33 @@
         padding: 0;
         border-bottom-left-radius: 3px;
         border-bottom-right-radius: 3px;
-        border-top: solid var(--divider-color) 1px;
         cursor: move;
         color: var(--primary);
+        justify-content: space-between;
+        align-items: center;
+    }
+}
 
+.coordinate-value {
+    padding: 0;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    line-height: normal;
+    height: 24px;
+    border-radius: 0 0 3px 3px;
 
-        .coordinate-value {
-            padding: 0 5px;
-            cursor: pointer;
-        }
+    &:hover {
+        color: var(--primary);
+    }
+
+    .icon-symbol{
+        padding: 0 5px;
+        font-size: 10px;
+    }
+
+    .coords {
+        padding: 0;
     }
 }
 
@@ -300,7 +320,7 @@
     min-width: 100px;
     background: #ffffff;
     border-radius: 3px;
-    border: solid var(--divider-color) 1px;
+    border: solid var(--divider-color) 0.005em;
     user-select: text;
     pointer-events: auto;
     box-shadow: 0 3px 7px rgba(2, 34, 60, 0.16);
@@ -312,7 +332,7 @@
         padding: 0px 5px;
         justify-content: center;
         align-items: center;
-        border-bottom: solid var(--divider-color) 1px;
+        border-bottom: solid var(--divider-color) 0.005em;
         border-top-left-radius: 3px;
         border-top-right-radius: 3px;
         cursor: pointer;
