fixed component update errors when editing a feature

--- a/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
+++ b/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
@@ -58,6 +58,7 @@
     height: 8px !important;
     right: -8px !important;
     bottom: -8px !important;
+
     &:hover {
         background-color: #106a9040;
         border-radius: 4px;
@@ -69,6 +70,7 @@
     height: 8px !important;
     left: -8px !important;
     bottom: -8px !important;
+
     &:hover {
         background-color: #106a9040;
         border-radius: 4px;
@@ -80,6 +82,7 @@
     height: 8px !important;
     left: -8px !important;
     top: -8px !important;
+
     &:hover {
         background-color: #106a9040;
         border-radius: 4px;
@@ -91,6 +94,7 @@
     height: 8px !important;
     right: -8px !important;
     top: -8px !important;
+
     &:hover {
         background-color: #106a9040;
         border-radius: 4px;
@@ -161,7 +165,6 @@
 
     .select-feature {
         padding: 0;
-        display: flex;
 
         .edit-symbol {
             font-size: 14px;
@@ -186,24 +189,23 @@
     }
 
     .content {
-        overflow: hidden;
-        width: 100%;
-        height: 100%;
+        padding: 0;
+        height: calc(100% - 70px);
         cursor: auto;
-
-        .ant-tabs >.ant-tabs-nav, :where(.css-dev-only-do-not-override-20aemx).ant-tabs >div>.ant-tabs-nav {
-            position: relative;
-            display: flex;
-            flex: none;
-            align-items: center;
-            width: 24px;
-        }
 
         .content-tabs {
             overflow: hidden;
-            border-bottom: solid var(--divider-color) 0.005em;
+            border-bottom: solid var(--divider-color) 1px;
             width: 100%;
-            height: 100%;
+            height: calc(100%);
+
+            .ant-tabs-nav {
+                position: relative;
+                display: flex;
+                flex: none;
+                align-items: center;
+                height: 24px;
+            }
 
             .ant-tabs-content-holder {
                 display: flex;
@@ -213,10 +215,12 @@
                 flex-direction: column;
                 height: 100%;
             }
+
             .content-move {
                 height: 100%;
                 width: 100%;
             }
+
             .item {
                 padding: 0;
 
@@ -253,6 +257,9 @@
                         text-align: right;
                         cursor: pointer;
                         color: var(--primary);
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                        white-space: nowrap;
                     }
 
                     .text-ellipsis {
@@ -270,8 +277,9 @@
     }
 
     .footer-popup {
-        display: flex;
         padding: 0;
+        display: flex;
+        width: 100%;
         border-bottom-left-radius: 3px;
         border-bottom-right-radius: 3px;
         cursor: move;
@@ -294,7 +302,7 @@
         color: var(--primary);
     }
 
-    .icon-symbol{
+    .icon-symbol {
         padding: 0 5px;
         font-size: 10px;
     }
