--- a/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
+++ b/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
@@ -165,6 +165,9 @@
 
     .select-feature {
         padding: 0;
+        position: absolute;
+        width: 100%;
+        top: 22px;
 
         .edit-symbol {
             font-size: 14px;
@@ -188,33 +191,74 @@
         }
     }
 
+    .ant-tabs .ant-tabs-content-holder {
+        flex: auto;
+        min-width: 0;
+        min-height: 0;
+        overflow: auto;
+    }
+
     .content {
         padding: 0;
-        height: calc(100% - 70px);
         cursor: auto;
+        position: absolute;
+        top: 46px;
+
+        .ant-btn.ant-btn-icon-only {
+            width: 24px;
+            padding-inline-start: 0;
+            padding-inline-end: 0;
+        }
+
+        .ant-tabs>.ant-tabs-nav .ant-tabs-nav-more {
+            position: relative;
+            padding: 10px 10px;
+            background: transparent;
+            border: 0;
+            color: rgba(0, 0, 0, 0.88);
+        }
+
+        .ant-tabs >.ant-tabs-nav {
+            position: relative;
+            display: flex;
+            flex: none;
+            align-items: center;
+            width: 32px;
+            font-size: 14px;
+        }
+
+        .ant-tabs-left >.ant-tabs-nav .ant-tabs-tab {
+            padding: 5px 0 5px 0;
+            text-align: center;
+        }
+
+        .ant-tabs >.ant-tabs-nav .ant-tabs-nav-list {
+            position: relative;
+            display: flex;
+            transition: opacity 0.3s;
+            align-items: center;
+        }
+
+        .ant-btn {
+            font-size: 14px;
+            line-height: 1.5714285714285714;
+            height: 24px;
+            padding: 0;
+            border-radius: 3px;
+        }
+
+        .edit-button {
+            
+            &:hover {
+                color: #106a9080;
+                background-color: #106a9000;
+            }
+        }
 
         .content-tabs {
             overflow: hidden;
             border-bottom: solid var(--divider-color) 1px;
-            width: 100%;
-            height: calc(100%);
-
-            .ant-tabs-nav {
-                position: relative;
-                display: flex;
-                flex: none;
-                align-items: center;
-                height: 24px;
-            }
-
-            .ant-tabs-content-holder {
-                display: flex;
-                padding: 0;
-                word-break: break-word;
-                overflow: auto;
-                flex-direction: column;
-                height: 100%;
-            }
+            height: 100%;
 
             .content-move {
                 height: 100%;
@@ -225,6 +269,7 @@
                 padding: 0;
 
                 .item-fields {
+                    height: 100%;
                     display: flex;
                     justify-content: space-between;
                     padding: 2px 5px;
@@ -286,6 +331,7 @@
         color: var(--primary);
         justify-content: space-between;
         align-items: center;
+        height: 24px;
     }
 }
 
@@ -361,4 +407,9 @@
 
 .ant-tooltip {
     pointer-events: none !important;
+}
+
+.more-tabs {
+    width: 40px;
+    color: aqua;
 }
