--- a/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
+++ b/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
@@ -203,52 +203,99 @@
         cursor: auto;
         position: absolute;
         top: 46px;
+        width: 100%;
 
-        .ant-btn.ant-btn-icon-only {
-            width: 24px;
-            padding-inline-start: 0;
-            padding-inline-end: 0;
-        }
-
-        .ant-tabs>.ant-tabs-nav .ant-tabs-nav-more {
-            position: relative;
-            padding: 10px 10px;
-            background: transparent;
-            border: 0;
-            color: rgba(0, 0, 0, 0.88);
-        }
-
-        .ant-tabs >.ant-tabs-nav {
-            position: relative;
+        .radio-block {
             display: flex;
-            flex: none;
-            align-items: center;
-            width: 32px;
-            font-size: 14px;
+
+            .radio-group {
+                overflow: hidden;
+
+                .radio-component {
+                    padding: 3px;
+                    overflow: auto;
+                    height: 100%;
+                }
+            }
+
+            .content-item{
+                width: 100%;
+                padding: 3px;
+                overflow: auto;
+                height: 100%;
+                padding: 2px;
+            }
+
+            .drop-down-icon {
+                font-size: 14px;
+                width: 22px;
+                height: 22px;
+                display: flex;
+                justify-items: center;
+                justify-content: center;
+                align-items: center;
+                flex: 0 0 auto;
+                margin: 0;
+                cursor: pointer;
+                color: var(--text-secondary);
+                z-index: 1000;
+                border: solid var(--divider-color) 0.005em;
+                border-radius: 4px;
+
+                &:hover {
+                    background-color: var(--divider-color);
+                    color: var(--primary);
+                    border-radius: 4px;
+                }
+            }
         }
 
-        .ant-tabs-left >.ant-tabs-nav .ant-tabs-tab {
-            padding: 5px 0 5px 0;
-            text-align: center;
-        }
 
-        .ant-tabs >.ant-tabs-nav .ant-tabs-nav-list {
-            position: relative;
-            display: flex;
-            transition: opacity 0.3s;
-            align-items: center;
-        }
+        // .ant-btn.ant-btn-icon-only {
+        //     width: 24px;
+        //     padding-inline-start: 0;
+        //     padding-inline-end: 0;
+        // }
 
-        .ant-btn {
-            font-size: 14px;
-            line-height: 1.5714285714285714;
-            height: 24px;
-            padding: 0;
-            border-radius: 3px;
-        }
+        // .ant-tabs>.ant-tabs-nav .ant-tabs-nav-more {
+        //     position: relative;
+        //     padding: 10px 10px;
+        //     background: transparent;
+        //     border: 0;
+        //     color: rgba(0, 0, 0, 0.88);
+        // }
+
+        // .ant-tabs >.ant-tabs-nav {
+        //     position: relative;
+        //     display: flex;
+        //     flex: none;
+        //     align-items: center;
+        //     width: 32px;
+        //     font-size: 14px;
+        // }
+
+        // .ant-tabs-left >.ant-tabs-nav .ant-tabs-tab {
+        //     padding: 5px 0 5px 0;
+        //     text-align: center;
+        // }
+
+        // .ant-tabs >.ant-tabs-nav .ant-tabs-nav-list {
+        //     position: relative;
+        //     display: flex;
+        //     transition: opacity 0.3s;
+        //     align-items: center;
+        // }
+
+        // .ant-btn {
+        //     font-size: 14px;
+        //     line-height: 1.5714285714285714;
+        //     height: 24px;
+        //     padding: 0;
+        //     border-radius: 3px;
+        // }
 
         .edit-button {
-            
+
             &:hover {
                 color: #106a9080;
                 background-color: #106a9000;
