--- a/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
+++ b/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
@@ -434,7 +434,7 @@
     align-items: center;
 
     .label-feature {
-        max-width: 75%;
+        min-width: 75%;
         flex: auto;
         overflow: hidden;
         white-space: nowrap;
@@ -443,7 +443,7 @@
     }
 
     .label-style {
-        max-width: 75%;
+        min-width: 25%;
         flex: auto;
         overflow: hidden;
         white-space: nowrap;
@@ -452,4 +452,9 @@
         text-align: right;
         color: var(--text-secondary);
     }
+}
+
+.error-component {
+    display: flex;
+    justify-content: center;
 }
