--- a/nextgisweb/resource/nodepkg/home_page/GridLayout.less
+++ b/nextgisweb/resource/nodepkg/home_page/GridLayout.less
@@ -1,7 +1,8 @@
 .grid-content {
 	display: flex;
-	flex-flow: row wrap;
-	min-width: 0;
+    flex-flow: row wrap;
+    min-width: 0;
+    justify-content: space-evenly;
 }
 
 .grid-block {
