--- a/nextgisweb/resource/nodepkg/home_page/Footer.less
+++ b/nextgisweb/resource/nodepkg/home_page/Footer.less
@@ -1,19 +1,18 @@
 .footer-webgis {
-    background-color: #212020;
-    padding: 0 10% 0 10%;
-    color: #fff;
-    height: auto;
-    display: flex;
-    margin-top: 0;
-    justify-content: space-between;
-    flex-direction: column;
+	background-color: #212020;
+	padding: 0 10% 0 10%;
+	color: #fff;
+	height: auto;
+	display: flex;
+	margin-top: 0;
+	justify-content: space-between;
+	flex-direction: column;
 
 	.footer-info {
 		padding: 0;
-		display: flex;
-		width: 100%;
 		min-height: 190px;
 		margin: 10px 0 10px 0;
+		display: flex;
 	}
 
 	.uriit-logo {
@@ -21,11 +20,11 @@
 		display: flex;
 		flex-direction: column;
 		font-size: 64px;
-		margin: 0 90px 0 0;
+		margin: 0 50px 0 0;
 	}
 
 	.block-info {
-		width: 100%;
+		width: calc(100% - 50px);
 	}
 
 	.title-info {
@@ -35,9 +34,11 @@
 	.content-services {
 		display: flex;
 		flex-direction: column;
+
 		.services-a {
 			text-transform: uppercase;
 		}
+
 		.services-b {
 			padding: 0px 0px 0px 5px;
 			display: flex;
@@ -50,32 +51,29 @@
 		flex-flow: row wrap;
 		min-width: 0;
 		flex-wrap: nowrap;
+
 		.info-a {
-			max-width: 130px;
 			margin: 0px 64px 0 0;
 		}
-	
+
 		.info-b {
 			width: 450px;
 		}
-	
+
 		.info-b-item {
 			display: flex;
 			justify-content: space-between;
 		}
 
-		.item-c{
+		.item-c {
 			width: 100px;
 		}
 
-		.item-d{
+		.item-d {
 			width: 250px;
 		}
-	
+
 	}
-
-
-
 
 	.list-link {
 		display: flex;
