--- a/nextgisweb/resource/nodepkg/home_page/GridLayout.less
+++ b/nextgisweb/resource/nodepkg/home_page/GridLayout.less
@@ -1,72 +1,64 @@
-.grid-content {
-	display: flex;
-    flex-flow: row wrap;
-    min-width: 0;
-    justify-content: space-evenly;
+.ant-tooltip {
+	pointer-events: none !important;
 }
 
 .grid-block {
-	--ant-display: block;
-	display: block;
-	display: var(--ant-display);
-	flex: 0 0 83.33333333333334%;
-	max-width: 83.33333333333334%;
 	position: relative;
-	max-width: 100%;
-	min-height: 1px;
-	height: 100vh;
-}
-
-.left-block {
-	--ant-display: block;
-	display: block;
-	display: var(--ant-display);
-	flex: 0 0 8.333333333333332%;
-	max-width: 8.333333333333332%;
-	position: relative;
-	max-width: 100%;
-	min-height: 1px;
-}
-
-.right-block {
-	--ant-display: block;
-	display: block;
-	display: var(--ant-display);
-	flex: 0 0 8.333333333333332%;
-	max-width: 8.333333333333332%;
-	position: relative;
-	max-width: 100%;
 	min-height: 1px;
 }
 
 .block {
-	background: rgba(170, 232, 255, 0.694);
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
 
+.edit {
+	border: var(--divider-color) solid 1px;
+	box-sizing: border-box;
+	border-radius: 3px;
+	box-shadow: 0 1px 3px rgb(0 0 0 / 10%);
+}
+
 .static {
-	background: rgba(161, 169, 172, 0.375);
+	border: rgba(255, 255, 255, 0) solid 1px;
+	box-sizing: border-box;
 }
 
 .content-block {
 	position: absolute;
-	border: rgb(114, 106, 106) solid 1px;
+	border: var(--divider-color) solid 1px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	box-sizing: border-box;
-	padding: 5px;
+	padding: 0;
+	border-radius: 3px;
 }
 
 .edit-block {
 	font-size: 12px;
 	position: absolute;
-	border: rgb(114, 106, 106) solid 1px;
 	box-sizing: border-box;
 	overflow: auto;
 	padding: 5px;
 	overflow-wrap: break-word;
 	height: 100%;
+}
+
+.layout-map-edit {
+	border: 1px solid var(--divider-color);
+	padding: 0;
+	min-height: calc(100vh - 489px) !important;
+	margin: 5px;
+	border-radius: 3px;
+}
+
+.save-button {
+    height: 26px;
+    display: flex;
+    position: inherit;
+    left: 5px;
+    top: 0;
+    border-bottom: 1px dotted rgb(0 0 0 / 8%);
 }
