test home-page react-grid-layout 2

--- a/nextgisweb/resource/nodepkg/home_page/Content.less
+++ b/nextgisweb/resource/nodepkg/home_page/Content.less
@@ -21,6 +21,7 @@
 			flex-direction: column;
 			padding: 0;
 			height: calc(100%);
+			padding: 24px 0 0px 0;
 
 			.search-block {
 				max-width: 500px;
