--- a/nextgisweb/resource/nodepkg/home_page/Footer.less
+++ b/nextgisweb/resource/nodepkg/home_page/Footer.less
@@ -7,6 +7,7 @@
 	margin-top: 0;
 	justify-content: space-between;
 	flex-direction: column;
+	line-height: 2;
 
 	.footer-info {
 		padding: 0;
@@ -16,10 +17,10 @@
 	}
 
 	.uriit-logo {
-		height: 25px;
+		height: 40px;
 		display: flex;
 		flex-direction: column;
-		font-size: 64px;
+		font-size: 128px;
 		margin: 0 50px 0 0;
 	}
 
