--- a/nextgisweb/resource/nodepkg/home_page/GridLayout.less
+++ b/nextgisweb/resource/nodepkg/home_page/GridLayout.less
@@ -27,7 +27,6 @@
 
 .content-block {
 	position: absolute;
-	border: var(--divider-color) solid 1px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -55,10 +54,99 @@
 }
 
 .save-button {
-    height: 26px;
-    display: flex;
-    position: inherit;
-    left: 5px;
-    top: 0;
-    border-bottom: 1px dotted rgb(0 0 0 / 8%);
+	height: 26px;
+	display: flex;
+	position: inherit;
+	left: 5px;
+	top: 0;
+	border-bottom: 1px dotted rgb(0 0 0 / 8%);
+}
+
+.img_preview {
+	height: 200px;
+	margin: 0;
+	object-fit: contain;
+	padding: 0;
+	border-top-right-radius: 4px;
+	border-top-left-radius: 4px;
+	width: 100%;
+	z-index: -1;
+	position: relative;
+}
+
+.img_preview_none {
+	height: 168px;
+}
+
+.meta-card {
+	overflow: hidden;
+	display: flex;
+	flex: 1;
+	flex-direction: column;
+	justify-content: space-around;
+
+	.ant-card-meta-detail {
+		overflow: hidden;
+		display: flex;
+		flex: 1;
+		flex-direction: column;
+		justify-content: space-around;
+
+		.ant-card-meta-title {
+			height: 100%;
+			display: flex;
+			align-items: center;
+			margin: 8px 0 0 0;
+
+			.grid-card-meta-title {
+				margin: 5px 16px;
+				color: #000000;
+				font-weight: 400;
+				font-size: 16px;
+				overflow: hidden;
+				white-space: initial;
+				text-overflow: ellipsis;
+				line-height: 20.7px;
+				text-align: left;
+				letter-spacing: normal;
+				-webkit-line-clamp: 3;
+				display: -webkit-box;
+				-webkit-box-orient: vertical;
+			}
+		}
+
+		.ant-card-meta-description {
+			margin: 0 0 10px 0;
+
+			.icon-open-map {
+				margin: 0 0 0 10px;
+				color: #2a388c;
+				border: 1px solid #2a388c;
+				padding: 0;
+				border-radius: 2px;
+				line-height: 1;
+			}
+
+			a {
+				color: #2a388c;
+				display: flex;
+				align-items: center;
+				font-size: 24px;
+				padding: 5px 16px;
+			}
+
+			.open-map {
+				color: #2a388c;
+				text-transform: uppercase;
+			}
+
+			svg {
+				color: #2a388c;
+			}
+		}
+	}
+}
+
+.react-grid-layout {
+	position: relative;
 }
