home page revision, style customization, removal of unused code

--- a/nextgisweb/resource/nodepkg/home_page/Content.less
+++ b/nextgisweb/resource/nodepkg/home_page/Content.less
@@ -89,7 +89,7 @@
 	}
 }
 
-.web_gis-map-filter-dropdown {
+.home-page-map-filter-dropdown {
 	.ant-select-item {
 		padding: 2px !important;
 	}
@@ -115,4 +115,90 @@
 input::-webkit-input-placeholder,
 textarea::-webkit-input-placeholder {
 	color: #2a398ca6 !important;
+}
+
+.label-delete-link {
+	color: var(--text-secondary);
+}
+
+figure {
+	margin: 5px;
+}
+
+table,
+tbody,
+tr,
+td {
+	border: 0.005em solid var(--divider-color);
+	border-collapse: collapse;
+	text-align: center;
+
+	tr,
+	td {
+		border-spacing: 0;
+		padding: 0 5px 0 5px;
+	}
+}
+
+.img-style {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+
+	.img-item {
+		width: 50%;
+	}
+}
+
+.image {
+	display: block;
+	margin-block-start: 0em;
+	margin-block-end: 0em;
+	margin-inline-start: 5px;
+	margin-inline-end: 5px;
+}
+
+
+p {
+	display: block;
+	margin-block-start: 0;
+	margin-block-end: 0;
+	margin-inline-start: 5px;
+	margin-inline-end: 5px;
+}
+
+.p-padding {
+	display: block;
+	margin-block-start: 0;
+	margin-block-end: 0;
+	margin-inline-start: 5px;
+	margin-inline-end: 5px;
+	margin: 5px;
+}
+
+.ant-modal .ant-modal-content {
+    position: relative;
+    background-color: #ffffff;
+    background-clip: padding-box;
+    border: 0;
+    border-radius: 3px;
+    box-shadow: none;
+    pointer-events: auto;
+    padding: 5px;
+}
+
+.ant-modal .ant-modal-title {
+	margin: 5px 32px 5px 5px;
+    color: #000000;
+    font-weight: 400;
+    font-size: 16px;
+    overflow: hidden;
+    white-space: initial;
+    text-overflow: ellipsis;
+    line-height: 20.7px;
+    text-align: left;
+    letter-spacing: normal;
+    -webkit-line-clamp: 1;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
 }
