--- a/nextgisweb/static/css/layout.less
+++ b/nextgisweb/static/css/layout.less
@@ -157,15 +157,16 @@ a[class*=" icon-"]:hover:before {
 /* -- Header --*/
 
 .ngw-pyramid-layout-header {
-    display: flex;
-    position: relative;
     align-items: center;
-    gap: 10px;
-    box-sizing: border-box;
     border-bottom: 0 solid var(--divider-color);
-    padding: 0;
-    min-width: 0;
+    box-sizing: border-box;
+    display: flex;
+    gap: 10px;
     min-height: 40px;
+    min-width: 0;
+    padding: 0;
+    position: relative;
+    justify-content: space-between;
 
     &::before {
         position: absolute;
@@ -176,33 +177,47 @@ a[class*=" icon-"]:hover:before {
         content: "";
     }
 
-    >a {
-        display: flex;
-        flex-shrink: 1;
-        justify-content: center;
-        box-sizing: content-box;
-        min-width: 40px;
 
-        >img {
-            display: block;
+    >div.panel-text {
+        display: flex;
+        align-items: center;
+        >a {
+            display: flex;
+            flex-shrink: 1;
+            justify-content: center;
+            box-sizing: content-box;
+            min-width: 40px;
+    
+            >img {
+                display: block;
+            }
+        }
+        >div.text {
+            color: var(--primary);
+            flex-grow: 1;
+            font-family: var(--ngw-head-font-family-list);
+            font-size: 16px;
+            font-weight: var(--ngw-head-font-weight);
+            padding: 0 5px 0 5px;
+            overflow: hidden;
+            white-space: initial;
+            text-overflow: ellipsis;
+            line-height: 20.7px;
+            text-align: left;
+            letter-spacing: normal;
+            -webkit-line-clamp: 2;
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
         }
     }
 
-    >div.text {
-        flex-grow: 1;
-        color: var(--primary);
-        font-weight: var(--ngw-head-font-weight);
-        font-size: 16px;
-        font-family: var(--ngw-head-font-family-list);
-    }
 
     >div.container {
         align-items: center;
         display: flex;
         gap: 7px;
+        padding: 0 7px 0 0;
         min-height: 24px;
-        min-width: 0;
-        margin: 0 7px 0 0;
     }
 }
 
