--- a/nextgisweb/resource/nodepkg/home-page/GridLayout.less
+++ b/nextgisweb/resource/nodepkg/home-page/GridLayout.less
@@ -159,6 +159,32 @@
 			}
 		}
 	}
+	.ant-modal .ant-modal-content {
+		position: relative;
+		background-color: #ffffff;
+		background-clip: padding-box;
+		border: 0;
+		border-radius: 3px;
+		box-shadow: none;
+		pointer-events: auto;
+		padding: 5px;
+	}
+	
+	.ant-modal .ant-modal-title {
+		margin: 5px 32px 5px 5px;
+		color: #000000;
+		font-weight: 400;
+		font-size: 16px;
+		overflow: hidden;
+		white-space: initial;
+		text-overflow: ellipsis;
+		line-height: 20.7px;
+		text-align: left;
+		letter-spacing: normal;
+		-webkit-line-clamp: 1;
+		display: -webkit-box;
+		-webkit-box-orient: vertical;
+	}
 }
 
 .react-grid-layout {
