testing menu using  react-grid-layout

--- a/nextgisweb/resource/nodepkg/home-page/GridLayout.less
+++ b/nextgisweb/resource/nodepkg/home-page/GridLayout.less
@@ -79,6 +79,10 @@
 	height: 168px;
 }
 
+.ant-card-bordered {
+	border: 1px solid var(--icon-color);
+}
+
 .meta-card {
 	overflow: hidden;
 	display: flex;
@@ -159,6 +163,7 @@
 			}
 		}
 	}
+
 	.ant-modal .ant-modal-content {
 		position: relative;
 		background-color: #ffffff;
@@ -169,7 +174,7 @@
 		pointer-events: auto;
 		padding: 5px;
 	}
-	
+
 	.ant-modal .ant-modal-title {
 		margin: 5px 32px 5px 5px;
 		color: #000000;
